# DevBrew

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
devbrew/: __init__.py  cli.py  config.py  errors.py  logging_config.py  main.py  money.py
devbrew/database/: __init__.py  mongo.py
devbrew/models/: __init__.py  cart.py  customization.py  delivery.py  menu.py  order.py  user.py
devbrew/repositories/: __init__.py  factory.py  menu_repository.py  mongo_order_repository.py  mongo_user_repository.py  order_repository.py  user_repository.py
devbrew/services/: __init__.py  auth_service.py  health_service.py  menu_service.py  order_service.py
devbrew/ui/: __init__.py  app.py  logo.py  styles.tcss
devbrew/ui/screens/: __init__.py  cart.py  console.py  customize.py  delivery.py  menu.py  order_review.py
devbrew/ui/widgets/: __init__.py  arrow_menu.py  cart_view.py  option_picker.py
docs/: 01_PROJECT_OVERVIEW.md  02_PRODUCT_BACKLOG.md  03_SPRINT_1.md  04_TECH_STACK.md  05_ARCHITECTURE.md  06_UI_UX_SPEC.md  07_DEFINITION_OF_DONE.md  08_SPRINT_1_REVIEW.md  09_SPRINT_1_RETRO.md  10_SPRINT_2.md  11_SPRINT_2_REVIEW.md  12_SPRINT_2_RETRO.md  AI_CONTEXT.md
tests/: conftest.py  test_auth.py  test_cart.py  test_cart_screen.py  test_config.py  test_console_screen.py  test_customization.py  test_customize_screen.py  test_delivery.py  test_delivery_screen.py  test_health.py  test_logging.py  test_menu.py  test_menu_screen.py  test_money.py  test_order.py  test_order_screen.py
