[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devbrew"
version = "0.1.0"
description = "DevBrew - a developer-first terminal coffee ordering app (TUI + CLI)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Joseph Forson" }]
dependencies = [
    # Pinned to tested majors so CI reproduces the local environment.
    "textual>=0.89,<0.90",
    "typer>=0.12,<1.0",
    "rich>=13.0,<15",
    "pymongo>=4.6,<5",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-cov>=5.0,<8",
    "pytest-asyncio>=1.0,<2",
    "ruff>=0.15,<0.16",
]

[project.scripts]
devbrew = "devbrew.cli:app"

[tool.setuptools.packages.find]
include = ["devbrew*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
